--- a/prosody/Dockerfile
+++ b/prosody/Dockerfile
@@ -46,6 +46,11 @@ RUN \
 
 RUN patch -d /usr/lib/prosody/modules/muc -p0 < /prosody-plugins/muc_owner_allow_kick.patch
 
+RUN wget -O /tmp/http.patch https://github.com/bjc/prosody/commit/a56dab0d87d19c507f66bf4b8284aa000b81d334.patch
+RUN patch -d /usr/lib/prosody/ -p1 < /tmp/http.patch
+RUN wget -O /tmp/luajwtjitsi.lua.patch https://gist.githubusercontent.com/goacid/43b804387ff3428762d633c0f305a9a2/raw/94731cec0605ce9769f8c519066e92369ab9f14e/luajwtjitsi.lua.patch
+RUN patch -d /usr/local/share/lua/5.2 -p1 < /tmp/luajwtjitsi.lua.patch
+
 COPY rootfs/ /
 
 EXPOSE 5222 5269 5347 5280
